[package]
name = "auth-eng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.7.2", features = [
    "macros",
    "http2",
    "multipart",
    "tracing",
    "ws",
] }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
chrono = "0.4.31"
uuid = { version = "1.6.1", features = ["v4"] }
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "tls-rustls",
    "chrono",
] }
jsonwebtoken = "9.2.0"
lettre = "0.11.2"
rand = "0.8.5"
blake3 = "1.5.0"
tokio_schedule = "0.3.1"
elasticsearch = { version = "8.5.0-alpha.1", features = ["rustls-tls"] }
serde_json = "1.0.108"
